.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:43:12 **** Incremental Build of configuration Debug for project FRA262_Studio3 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/Controller.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Controller.d" -MT"Core/Src/Controller.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Controller.o"
../Core/Src/Controller.c: In function 'PIDController_Command':
../Core/Src/Controller.c:28:20: error: assignment to expression with array type
   28 |         PID->Error = setpoint - Feedback->LinearPosition;
      |                    ^
make: *** [Core/Src/subdir.mk:40: Core/Src/Controller.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
